line plot changes bar plot changes scatter plot changes pie chart changes subplot changes histogram changes

--- a/src/1-line-plot.ipynb
+++ b/src/1-line-plot.ipynb
@@ -28,22 +28,34 @@
     "import numpy as np\n",
     "\n",
     "# Data\n",
-    "x = np.linspace(0, 10, 100)\n",
-    "y = x**2\n",
+    "try:\n",
+    "    # Generate data (ensure it doesn't raise errors)\n",
+    "    x = np.linspace(0, 10, 100)\n",
+    "    y = x**2\n",
+    "    \n",
+    "    # Error handling for empty arrays\n",
+    "    if len(x) == 0 or len(y) == 0:\n",
+    "        raise ValueError(\"Data arrays are empty. Please ensure valid data is provided.\")\n",
     "\n",
-    "# Plot\n",
-    "plt.figure(figsize=(8, 5))\n",
-    "plt.plot(x, y, label=r'$y = x^2$', color='b', linewidth=2)\n",
+    "    # Plot\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.plot(x, y, label=r'$y = x^2$', color='b', linewidth=2)\n",
     "\n",
-    "# Customization\n",
-    "plt.title(\"Square Function Plot\")\n",
-    "plt.xlabel(\"X values\")\n",
-    "plt.ylabel(\"Y values\")\n",
-    "plt.grid(True, linestyle='--', alpha=0.7)\n",
-    "plt.legend()\n",
+    "    # Customization\n",
+    "    plt.title(\"Square Function Plot\")\n",
+    "    plt.xlabel(\"X values\")\n",
+    "    plt.ylabel(\"Y values\")\n",
+    "    plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "    plt.legend()\n",
     "\n",
-    "# Show plot\n",
-    "plt.show()\n"
+    "    # Show plot\n",
+    "    plt.show()\n",
+    "\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")\n",
+    "\n"
    ]
   },
   {
