--- a/src/2-bar-plot.ipynb
+++ b/src/2-bar-plot.ipynb
@@ -31,17 +31,28 @@
     "values = [5, 7, 3, 9]\n",
     "colors = ['red', 'blue', 'green', 'purple']\n",
     "\n",
-    "# Plot\n",
-    "plt.figure(figsize=(6, 4))\n",
-    "plt.bar(categories, values, color=colors)\n",
+    "# Error handling: Check if data arrays are valid\n",
+    "try:\n",
+    "    if len(categories) != len(values) or len(values) != len(colors):\n",
+    "        raise ValueError(\"Data arrays have mismatched lengths. Ensure categories, values, and colors have the same length.\")\n",
+    "    \n",
+    "    # Plot\n",
+    "    plt.figure(figsize=(6, 4))\n",
+    "    plt.bar(categories, values, color=colors)\n",
     "\n",
-    "# Customization\n",
-    "plt.title(\"Bar Plot of Categories\")\n",
-    "plt.xlabel(\"Categories\")\n",
-    "plt.ylabel(\"Values\")\n",
+    "    # Customization\n",
+    "    plt.title(\"Bar Plot of Categories\")\n",
+    "    plt.xlabel(\"Categories\")\n",
+    "    plt.ylabel(\"Values\")\n",
     "\n",
-    "# Show plot\n",
-    "plt.show()\n"
+    "    # Show plot\n",
+    "    plt.show()\n",
+    "\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")\n",
+    "\n"
    ]
   },
   {
