--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -36,27 +36,38 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Data\n",
-    "x = [1, 2, 3, 4, 5]\n",
-    "y = [2, 4, 6, 8, 10]\n",
+    "def create_scatter_plot(x, y):\n",
+    "    # Error Handling: Check if lengths of x and y match\n",
+    "    if len(x) != len(y):\n",
+    "        raise ValueError(\"Error: The lengths of x and y must be the same.\")\n",
+    "    \n",
+    "    # Plot\n",
+    "    plt.figure(figsize=(6, 4))\n",
+    "    plt.scatter(x, y, color='blue', label=\"Data Points\")\n",
     "\n",
-    "# Plot\n",
-    "plt.figure(figsize=(6, 4))\n",
-    "plt.scatter(x, y, color='blue', label=\"Data Points\")\n",
+    "    # Annotations\n",
+    "    for i in range(len(x)):\n",
+    "        plt.annotate(f\"({x[i]}, {y[i]})\", (x[i], y[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
     "\n",
-    "# Annotations\n",
-    "for i in range(len(x)):\n",
-    "    plt.annotate(f\"({x[i]}, {y[i]})\", (x[i], y[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
+    "    # Customization\n",
+    "    plt.title(\"Scatter Plot with Annotations\")\n",
+    "    plt.xlabel(\"X values\")\n",
+    "    plt.ylabel(\"Y values\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True, linestyle='--', alpha=0.7)\n",
     "\n",
-    "# Customization\n",
-    "plt.title(\"Scatter Plot with Annotations\")\n",
-    "plt.xlabel(\"X values\")\n",
-    "plt.ylabel(\"Y values\")\n",
-    "plt.legend()\n",
-    "plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "    # Show plot\n",
+    "    plt.show()\n",
     "\n",
-    "# Show plot\n",
-    "plt.show()\n"
+    "# Example Data\n",
+    "x_values = [1, 2, 3, 4, 5]\n",
+    "y_values = [2, 4, 6, 8, 10]\n",
+    "\n",
+    "# Call Function\n",
+    "create_scatter_plot(x_values, y_values)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
