--- a/src/5-subplot.ipynb
+++ b/src/5-subplot.ipynb
@@ -38,53 +38,71 @@
     "import numpy as np\n",
     "\n",
     "# Data for plots\n",
-    "x = np.linspace(0, 10, 100)\n",
-    "y = x**2\n",
+    "try:\n",
+    "    # Line plot data\n",
+    "    x = np.linspace(0, 10, 100)\n",
+    "    y = x**2\n",
     "\n",
-    "categories = ['A', 'B', 'C', 'D']\n",
-    "values = [5, 7, 3, 9]\n",
+    "    # Bar chart data\n",
+    "    categories = ['A', 'B', 'C', 'D']\n",
+    "    values = [5, 7, 3, 9]\n",
     "\n",
-    "scatter_x = [1, 2, 3, 4, 5]\n",
-    "scatter_y = [2, 4, 6, 8, 10]\n",
+    "    # Scatter plot data\n",
+    "    scatter_x = [1, 2, 3, 4, 5]\n",
+    "    scatter_y = [2, 4, 6, 8, 10]\n",
     "\n",
-    "pie_labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
-    "pie_sizes = [40, 25, 20, 15]\n",
+    "    # Pie chart data\n",
+    "    pie_labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
+    "    pie_sizes = [40, 25, 20, 15]\n",
     "\n",
-    "# Create subplots\n",
-    "fig, axs = plt.subplots(2, 2, figsize=(10, 10))\n",
+    "    # Check if data arrays are empty\n",
+    "    if len(x) == 0 or len(y) == 0 or len(categories) == 0 or len(values) == 0 or len(scatter_x) == 0 or len(scatter_y) == 0 or len(pie_labels) == 0 or len(pie_sizes) == 0:\n",
+    "        raise ValueError(\"One or more data arrays are empty. Please ensure all data is provided.\")\n",
     "\n",
-    "# Line plot\n",
-    "axs[0, 0].plot(x, y, color='blue', label=r'$y = x^2$')\n",
-    "axs[0, 0].set_title(\"Line Plot\")\n",
-    "axs[0, 0].set_xlabel(\"X values\")\n",
-    "axs[0, 0].set_ylabel(\"Y values\")\n",
-    "axs[0, 0].grid(True)\n",
-    "axs[0, 0].legend()\n",
+    "    # Check if the length of pie sizes matches the labels\n",
+    "    if len(pie_sizes) != len(pie_labels):\n",
+    "        raise ValueError(\"Pie chart data arrays have mismatched lengths. Ensure labels and sizes have the same length.\")\n",
     "\n",
-    "# Bar chart\n",
-    "axs[0, 1].bar(categories, values, color=['red', 'blue', 'green', 'purple'])\n",
-    "axs[0, 1].set_title(\"Bar Chart\")\n",
-    "axs[0, 1].set_xlabel(\"Categories\")\n",
-    "axs[0, 1].set_ylabel(\"Values\")\n",
+    "    # Create subplots\n",
+    "    fig, axs = plt.subplots(2, 2, figsize=(10, 10))\n",
     "\n",
-    "# Scatter plot\n",
-    "axs[1, 0].scatter(scatter_x, scatter_y, color='blue')\n",
-    "for i in range(len(scatter_x)):\n",
-    "    axs[1, 0].annotate(f\"({scatter_x[i]}, {scatter_y[i]})\", (scatter_x[i], scatter_y[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
-    "axs[1, 0].set_title(\"Scatter Plot\")\n",
-    "axs[1, 0].set_xlabel(\"X values\")\n",
-    "axs[1, 0].set_ylabel(\"Y values\")\n",
-    "axs[1, 0].grid(True)\n",
+    "    # Line plot\n",
+    "    axs[0, 0].plot(x, y, color='blue', label=r'$y = x^2$')\n",
+    "    axs[0, 0].set_title(\"Line Plot\")\n",
+    "    axs[0, 0].set_xlabel(\"X values\")\n",
+    "    axs[0, 0].set_ylabel(\"Y values\")\n",
+    "    axs[0, 0].grid(True)\n",
+    "    axs[0, 0].legend()\n",
     "\n",
-    "# Pie chart\n",
-    "axs[1, 1].pie(pie_sizes, labels=pie_labels, autopct='%1.1f%%', colors=['blue', 'red', 'green', 'orange'], startangle=140, wedgeprops={'edgecolor': 'black'})\n",
-    "axs[1, 1].set_title(\"Pie Chart\")\n",
+    "    # Bar chart\n",
+    "    axs[0, 1].bar(categories, values, color=['red', 'blue', 'green', 'purple'])\n",
+    "    axs[0, 1].set_title(\"Bar Chart\")\n",
+    "    axs[0, 1].set_xlabel(\"Categories\")\n",
+    "    axs[0, 1].set_ylabel(\"Values\")\n",
     "\n",
-    "# Adjust layout\n",
-    "plt.tight_layout()\n",
+    "    # Scatter plot\n",
+    "    axs[1, 0].scatter(scatter_x, scatter_y, color='blue')\n",
+    "    for i in range(len(scatter_x)):\n",
+    "        axs[1, 0].annotate(f\"({scatter_x[i]}, {scatter_y[i]})\", (scatter_x[i], scatter_y[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
+    "    axs[1, 0].set_title(\"Scatter Plot\")\n",
+    "    axs[1, 0].set_xlabel(\"X values\")\n",
+    "    axs[1, 0].set_ylabel(\"Y values\")\n",
+    "    axs[1, 0].grid(True)\n",
     "\n",
-    "# Show plot\n",
-    "plt.show()\n"
+    "    # Pie chart\n",
+    "    axs[1, 1].pie(pie_sizes, labels=pie_labels, autopct='%1.1f%%', colors=['blue', 'red', 'green', 'orange'], startangle=140, wedgeprops={'edgecolor': 'black'})\n",
+    "    axs[1, 1].set_title(\"Pie Chart\")\n",
+    "\n",
+    "    # Adjust layout\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    # Show plot\n",
+    "    plt.show()\n",
+    "\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")\n"
    ]
   }
  ],
