--- a/src/6-histogram.ipynb
+++ b/src/6-histogram.ipynb
@@ -39,18 +39,34 @@
     "# Data\n",
     "data = [1, 2, 2, 3, 3, 3, 4, 4, 4, 4, 5]\n",
     "\n",
-    "# Plot\n",
-    "plt.figure(figsize=(6, 4))\n",
-    "plt.hist(data, bins=5, color='skyblue', edgecolor='black')\n",
+    "try:\n",
+    "    # Check if data is empty\n",
+    "    if len(data) == 0:\n",
+    "        raise ValueError(\"Data array is empty. Please provide data for plotting.\")\n",
+    "    \n",
+    "    # Check if data contains valid numeric values\n",
+    "    if not all(isinstance(i, (int, float)) for i in data):\n",
+    "        raise TypeError(\"Data contains non-numeric values. Please ensure all values are numeric.\")\n",
     "\n",
-    "# Customization\n",
-    "plt.title(\"Histogram of Data\")\n",
-    "plt.xlabel(\"Value\")\n",
-    "plt.ylabel(\"Frequency\")\n",
-    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "    # Plot\n",
+    "    plt.figure(figsize=(6, 4))\n",
+    "    plt.hist(data, bins=5, color='skyblue', edgecolor='black')\n",
     "\n",
-    "# Show plot\n",
-    "plt.show()\n"
+    "    # Customization\n",
+    "    plt.title(\"Histogram of Data\")\n",
+    "    plt.xlabel(\"Value\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "\n",
+    "    # Show plot\n",
+    "    plt.show()\n",
+    "\n",
+    "except ValueError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "except TypeError as e:\n",
+    "    print(f\"Error: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")\n"
    ]
   }
  ],
