--- a/src/4-pie-chart.ipynb
+++ b/src/4-pie-chart.ipynb
@@ -36,20 +36,30 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Data\n",
-    "labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
-    "sizes = [40, 25, 20, 15]\n",
-    "colors = ['blue', 'red', 'green', 'orange']\n",
+    "def create_pie_chart(labels, sizes):\n",
+    "    # Error Handling: Check if data is valid\n",
+    "    if any(size < 0 for size in sizes):\n",
+    "        raise ValueError(\"Error: Sizes must not contain negative values.\")\n",
+    "    if sum(sizes) == 0:\n",
+    "        raise ValueError(\"Error: The sum of sizes must be greater than zero.\")\n",
     "\n",
-    "# Plot\n",
-    "plt.figure(figsize=(6, 6))\n",
-    "plt.pie(sizes, labels=labels, autopct='%1.1f%%', colors=colors, startangle=140, wedgeprops={'edgecolor': 'black'})\n",
+    "    # Plot\n",
+    "    plt.figure(figsize=(6, 6))\n",
+    "    plt.pie(sizes, labels=labels, autopct='%1.1f%%', colors=['blue', 'red', 'green', 'orange'], \n",
+    "            startangle=140, wedgeprops={'edgecolor': 'black'})\n",
     "\n",
-    "# Title\n",
-    "plt.title(\"Programming Language Popularity\")\n",
+    "    # Title\n",
+    "    plt.title(\"Programming Language Popularity\")\n",
     "\n",
-    "# Show plot\n",
-    "plt.show()\n"
+    "    # Show plot\n",
+    "    plt.show()\n",
+    "\n",
+    "# Example Data\n",
+    "pie_labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
+    "pie_sizes = [40, 25, 20, 15]\n",
+    "\n",
+    "# Call Function\n",
+    "create_pie_chart(pie_labels, pie_sizes)\n"
    ]
   }
  ],
